# GeNeric_build

./: BUILDCONFIG.gn  README.md  execute_script.py  myvcvars.bat  myvcvars19.bat  myvcvars22.bat
config/: BUILD.gn
config/win/: BUILD.gn
toolchain/win/: BUILD.gn  copy.py
