# Copyright (c) 2013 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This file contains Windows-specific configuration.
# Modified from Chromium's version

# Dynamic CRT -----------------------------------------------------------------

config("dynamic_crt") {
  if (is_debug) {
    # This pulls in the DLL debug CRT and defines _DEBUG
    cflags = [ "/MDd" ]
  } else {
    cflags = [ "/MD" ]
  }
}

# Lean and mean ---------------------------------------------------------------

# Some third party code might not compile with WIN32_LEAN_AND_MEAN so we have
# to have a separate config for it. Remove this config from your target to
# get the "bloaty and accommodating" version of windows.h.
config("lean_and_mean") {
  defines = [ "WIN32_LEAN_AND_MEAN" ]
}

# Nominmax --------------------------------------------------------------------

# Some third party code defines NOMINMAX before including windows.h, which
# then causes warnings when it's been previously defined on the command line.
# For such targets, this config can be removed.

config("nominmax") {
  defines = [ "NOMINMAX" ]
}

# Optimization levels ---------------------------------------------------------

# TODO: Look at common_optimize_on_cflags in the chromium repo for some good
# additional optimizations.
config("optimization_level") {
   if (opt_level == 1) {
    cflags = [ "/O1" ]
  } else if (opt_level == 2) {
    cflags = [ "/O2" ]
  } else {
    # default optimization level is 0.
    cflags = [ "/Od" ]
  }
}